build/log/idf_py_stdout_output_4500
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\esp\CompleteCopy\build\bootloader\esp-idf\esptool_py && C:\esp\Espressif\python_env\idf5.3_py3.11_env\Scripts\python.exe C:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/esp/CompleteCopy/build/bootloader/bootloader.bin"
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/7] Building C object esp-idf/wifi/CMakeFiles/__idf_wifi.dir/wifi.c.obj
FAILED: esp-idf/wifi/CMakeFiles/__idf_wifi.dir/wifi.c.obj 
ccache C:\esp\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/esp/CompleteCopy/build/config -IC:/esp/CompleteCopy/components/wifi/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/newlib/platform_include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/include/freertos -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/config/xtensa/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/freertos/esp_additions/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/dma/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/ldo/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/. -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_hw_support/port/esp32s3/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/heap/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/log/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/soc/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32s3 -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/soc/esp32s3/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/hal/platform_port/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/hal/esp32s3/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/hal/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/include/esp32s3 -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_rom/esp32s3 -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_common/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/soc -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_system/port/include/private -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/esp32s3/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/xtensa/deprecated_include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/include/apps/sntp -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/lwip/src/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/freertos/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/arch -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/lwip/port/esp32xx/include/sys -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_wifi/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_wifi/wifi_apps/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_wifi/include/local -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_event/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_phy/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_phy/esp32s3/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_netif/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/mbedtls/port/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/mbedtls/mbedtls/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/mbedtls/mbedtls/library -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/mbedtls/esp_crt_bundle/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/mbedtls/mbedtls/3rdparty/everest/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/mbedtls/mbedtls/3rdparty/p256-m -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/mbedtls/mbedtls/3rdparty/p256-m/p256-m -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_http_client/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/esp_http_server/include -IC:/esp/Espressif/frameworks/esp-idf-v5.3.1/components/http_parser -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/esp/CompleteCopy=. -fmacro-prefix-map=C:/esp/Espressif/frameworks/esp-idf-v5.3.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/wifi/CMakeFiles/__idf_wifi.dir/wifi.c.obj -MF esp-idf\wifi\CMakeFiles\__idf_wifi.dir\wifi.c.obj.d -o esp-idf/wifi/CMakeFiles/__idf_wifi.dir/wifi.c.obj -c C:/esp/CompleteCopy/components/wifi/wifi.c
C:/esp/CompleteCopy/components/wifi/wifi.c: In function 'url_decode':
C:/esp/CompleteCopy/components/wifi/wifi.c:202:65: error: implicit declaration of function 'isxdigit' [-Werror=implicit-function-declaration]
  202 |         if ((*src == '%') && ((a = src[1]) && (b = src[2])) && (isxdigit(a) && isxdigit(b))) {
      |                                                                 ^~~~~~~~
C:/esp/CompleteCopy/components/wifi/wifi.c:3:1: note: include '<ctype.h>' or provide a declaration of 'isxdigit'
    2 | #include "esp_log.h"
  +++ |+#include <ctype.h>
    3 | #include "esp_wifi.h"
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
